--- a/sigbang_user_front/Dockerfile
+++ b/sigbang_user_front/Dockerfile
@@ -11,6 +11,8 @@ FROM node:22-alpine
 ENV NODE_ENV=production
 WORKDIR /app
 COPY --from=build /app ./
+RUN chown -R node:node /app
+USER node
 EXPOSE 3000
 CMD ["npm","start"]
 
